--- a/app/src/main/res/layout/item_word_level.xml
+++ b/app/src/main/res/layout/item_word_level.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingBottom="5dp">
 
     <TextView
         android:id="@+id/level_no_tv"
@@ -32,9 +33,12 @@
         android:id="@+id/level_description_cv"
         android:layout_width="300dp"
         android:layout_height="100dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:elevation="3dp"
+        app:cardUseCompatPadding="true"
         app:cardCornerRadius="2dp">
 
         <android.support.constraint.ConstraintLayout
@@ -66,6 +70,7 @@
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <ImageView
+                android:id="@+id/toggle_example_iv"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:padding="25dp"
@@ -78,12 +83,14 @@
     </android.support.v7.widget.CardView>
 
     <LinearLayout
+        android:id="@+id/example_list_ll"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="140dp"
         android:orientation="vertical"
-        android:background="#05000000"
+        android:background="#10000000"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/level_description_cv">
+        app:layout_constraintTop_toBottomOf="@+id/level_description_cv"
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/example_heading_tv"
@@ -105,16 +112,6 @@
             android:layout_marginRight="20sp"
             android:layout_marginTop="10sp"/>
 
-        <TextView
-            android:id="@+id/example2_text_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="This is example 2"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:layout_marginLeft="20sp"
-            android:layout_marginRight="20sp"
-            android:layout_marginTop="16sp"/>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
