--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#7337b8</color>
+    <color name="colorPrimaryDark">@color/purple_dark</color>
     <color name="colorAccent">#D81B60</color>
     <color name="purple">#800080</color>
+    <color name="purple_dark">#622e9e</color>
+    <color name="white">#FFFFFF</color>
 </resources>
