--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,153 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:text="Hello World!"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/banner_iv"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:src="@drawable/bg_ted"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/btn_layout_cl"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/banner_iv"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <LinearLayout
-                android:id="@+id/layout_eng_hin_ll"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:orientation="vertical"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/layout_eng_search_ll"
-                android:background="@color/purple"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/abc_ic_voice_search_api_material"
-                    android:tint="#ffffff"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="English-Hindi"
-                    android:textColor="#ffffff"
-                    android:layout_gravity="center"
-                    android:gravity="center"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/layout_eng_search_ll"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:orientation="vertical"
-                android:layout_marginLeft="8dp"
-                app:layout_constraintStart_toEndOf="@id/layout_eng_hin_ll"
-                app:layout_constraintTop_toTopOf="@+id/layout_eng_hin_ll"
-                android:background="@color/purple"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/abc_ic_search_api_material"
-                    android:tint="#ffffff"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="English-Search"
-                    android:textColor="#ffffff"
-                    android:layout_gravity="center"
-                    android:gravity="center"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/layout_hin_eng_ll"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:orientation="vertical"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toStartOf="@+id/layout_eng_hin_ll"
-                app:layout_constraintTop_toBottomOf="@+id/layout_eng_hin_ll"
-                android:background="@color/purple"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/abc_ic_voice_search_api_material"
-                    android:tint="#ffffff"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Hindi-English"
-                    android:textColor="#ffffff"
-                    android:layout_gravity="center"
-                    android:gravity="center"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/layout_hin_search_ll"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:orientation="vertical"
-                android:layout_marginLeft="8dp"
-                app:layout_constraintStart_toEndOf="@id/layout_eng_hin_ll"
-                app:layout_constraintTop_toTopOf="@+id/layout_hin_eng_ll"
-                android:background="@color/purple"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/abc_ic_search_api_material"
-                    android:tint="#ffffff"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Hindi-Search"
-                    android:textColor="#ffffff"
-                    android:layout_gravity="center"
-                    android:gravity="center"/>
-            </LinearLayout>
-
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/aboutus"
-                app:layout_constraintTop_toTopOf="@id/layout_eng_hin_ll"
-                app:layout_constraintBottom_toBottomOf="@id/layout_hin_eng_ll"
-                app:layout_constraintStart_toStartOf="@id/layout_eng_hin_ll"
-                app:layout_constraintEnd_toEndOf="@id/layout_eng_search_ll"/>
-
-        </android.support.constraint.ConstraintLayout>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/random_news"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/btn_layout_cl"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-    </android.support.constraint.ConstraintLayout>
-
-</ScrollView>
+</android.support.constraint.ConstraintLayout>
